Minimax coded