@@ -1,31 +1,24 @@
 package rithmomachia;
 
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
 public class Minimax {
     final Victory victory;
-    final int bodyGoal;
-    final int valueGoal;
-    final int digitsGoal;
     final Board board;
     final Color computerColor;
+    private VictoryManager victoryManager;
 //    private final int bodiesRemaining;
 //    private final int valueRemaining;
 //    private final int digitsRemaining;
 
-    public Minimax(Board board, Victory victory, Color color, int bodyGoal, int valueGoal, int digitsGoal) {
+    public Minimax(Board board, Victory victory, VictoryManager victoryManager, Color color) {
         this.computerColor = color;
         this.board = board;
         this.victory = victory;
-        this.bodyGoal = bodyGoal;
-        this.valueGoal = valueGoal;
-        this.digitsGoal = digitsGoal;
-        //Feed this as object into Minimax node?
-//        this.bodiesRemaining = bodyGoal;
-//        this.valueRemaining = valueGoal;
-//        this.digitsRemaining = digitsGoal;
+        this.victoryManager = victoryManager;
     }
 
     public Turn findBestMove(int depth) {
@@ -34,12 +27,21 @@ public class Minimax {
         // For each piece it can move, it must run minimax on the child node
         // If that child node beats the current max, that becomes the new node that is returned
         List<Turn> moves = board.getAllMovesForColor(computerColor);
-        Turn bestMove = moves.get(0);
+        Turn bestMove = moves.getFirst();
         int bestScore = Integer.MIN_VALUE;
         for (int i = 1; i < moves.size(); i++) {
             Turn move = moves.get(i);
             Board virtualBoard = board.makeVirtualBoard(move);
-            MinimaxNode branch = new MinimaxNode(move, depth - 1, 0, virtualBoard, this.bodyGoal, this.valueGoal, this.digitsGoal, false);
+            Color playerColor = computerColor == Color.B ? Color.W : Color.B;
+            int maximizerBodiesRemaining = victoryManager.getBodiesRemainingForColor(computerColor);
+            int maximizerValueRemaining = victoryManager.getValueRemainingForColor(computerColor);
+            int maximizerDigitsRemaining = victoryManager.getDigitsRemainingForColor(computerColor);
+            int minimizerBodiesRemaining = victoryManager.getBodiesRemainingForColor(playerColor);
+            int minimizerValueRemaining = victoryManager.getValueRemainingForColor(playerColor);
+            int minimizerDigitsRemaining = victoryManager.getDigitsRemainingForColor(playerColor);
+            GoalHolder maximizerGoals = new GoalHolder(maximizerBodiesRemaining, maximizerValueRemaining, maximizerDigitsRemaining, true);
+            GoalHolder minimizerGoals = new GoalHolder(minimizerBodiesRemaining, minimizerValueRemaining, minimizerDigitsRemaining, false);
+            MinimaxNode branch = new MinimaxNode(move, depth - 1, 0, virtualBoard, maximizerGoals, minimizerGoals, false);
             int branchValue = minimax(branch, depth - 1, false);
             if (branchValue > bestScore) {
                 bestScore = branchValue;
